--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsGB",
   "version": "0.0.0",
   "description": "React-based, modern, optimized GB emulator for JavaScript",
-  "main": "app.js",
+  "main": "webpack.config.js",
   "directories": {
     "test": "tests"
   },
@@ -26,16 +26,14 @@
     "url": "https://github.com/jkoudys/jsGB/issues"
   },
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "react": "~0.13.3",
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "events": "^1.1.0",
+    "flux": "^2.1.1",
     "node-libs-browser": "~0.5.2",
-    "gulp-babel": "~5.1.0",
-    "gulp-util": "~3.0.6",
-    "vinyl-source-stream": "~1.1.0",
-    "babelify": "~6.1.3",
-    "browserify": "~11.0.0",
-    "gulp-less": "~3.0.3",
-    "flux": "~2.0.3",
-    "events": "~1.0.2"
+    "react": "~0.14.7",
+    "vinyl-source-stream": "~1.1.0"
   }
 }
