--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "events": "^1.1.0",
     "flux": "^2.1.1",
-    "node-libs-browser": "~0.5.2",
-    "react": "~0.14.7",
-    "vinyl-source-stream": "~1.1.0"
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "webpack": "^1.13.0"
   }
 }
